# file-transfer-system-test

./: .env.example  README.md  pyproject.toml  run.py
app/: enums.py  main.py
app/db/: file_transfer.py  file_transfers.py  otp_attempts.py  supabase_client.py
app/routes/api/: download.py  upload.py
app/services/: download_service.py  otp_service.py  upload_service.py
app/services/utils/: data_formatter.py  gcs.py  otp.py  resend.py  token.py
docs/: 01_mvp-requirements-definition.md  02_task-overview-and-implementation.md
frontend/: index.html
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: DownloadStatus.jsx  FileDropzone.jsx  OtpCodeInput.jsx  OtpVerification.jsx  RequiredAsterisk.jsx  UploadStatus.jsx
frontend/src/pages/: DownloadPage.jsx  UploadPage.jsx
