[project]
name = "file-transfer-system-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "google-cloud-storage>=3.12.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "resend>=2.32.2",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.50.2",
]
